201803060
Adds Webcam as a separate switched video and audio source
Makes test cards and contest numbers available for both H264 and MPEG-2
Adds some 16:9 and 720p modes
Adds support for native H264 and audio streaming from the Logitech C920
SigGen supports the Elcom microwave oscillators (select ADF5355..)

201802202
Restores "save-to-USB" capability
Enables C920 Webcam
Instant band switching
Decreases Attenuator spi clock frequency for reliability
Corrects bug that did not copy presets across on upgrade

201802041
Major touchscreen menu re-write
Introduces new gui sub-menus for parameter and config selection
Introduces attenuator and transverter switching
Introduces stored preset configurations
Initialises spi GPIO ports on GUI start-up
Corrects ADF4351 and Attenuator spi timing to improve reliability
Corrects FileTS failure to cease transmitting 
Adds partial support (Video only) for Logitech C525 and C270 Webcams

201801220
Introduces new gui sub-menus for parameter and config selection
Major menu rewrite in prep for transverter switching
Initialises spi GPIO ports on GUI start-up
Corrects ADF4351 and Attenuator spi timing to improve reliability
Add partial support (Video only) for Logitech C525 and C270 Webcams

201801061
Introduces attenuator option for Portsdown output in SigGen
Adds attenuator option to Portsdown and ADF4351 modes in SigGen
Enables DATV Express SigGen
Enables 333KS QPSK mod for Portsdown and ADF4351 modes in SigGen
Cures multiple overlays of receive parameters
Single touch exit from receive to Main Menu

201801012
Introduces scheduler.sh to switch between rpidatv, siggen & FreqShow
Adds a Display option for the Element14_7
Resizes CAMMPEG-2 viewfinder for Element14_7 display
Enables IPTS output for MPEG-2 modes
Corrects higlights on Menu 2
Introduces FreqShow Spectrum display

201712181
Complete rewrite of touchscreen touch response function
Adds Menu Titles
Adds Switchable 480p Output in CAMMPEG-2 and ANALOGMPEG-2